# pydantic-sqlalchemy-tutorial

./: .env.sample.env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml  code_quality.yml  security.yml
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/router/: user.py
app/config/: exceptions.py  init_settings.py  settings.py  utils.py
app/core/: exceptions.py  lifecycle.py  utils.py
app/crud/: user.py
app/db/: __init__.py  session.py
app/models/: user.py
app/schemas/: user.py
assets/sql/ddl/: weather.sql
introduction/: __init__.py  pydantic_intro.py  sa_core.py  sa_orm.py  sa_raw.py
pipeline/: .env.sample  __init__.py  etl.py
pipeline/config/: __init__.py  init_settings.py  settings.py
pipeline/core/: __init__.py  decorators.py  logging_setup.py
pipeline/db/: __init__.py  session.py
pipeline/engineering/: __init__.py  extraction.py  loading.py  transformation.py
pipeline/exceptions/: __init__.py  exceptions.py
pipeline/models/: __init__.py  weather.py
pipeline/models/base/: __init__.py  audit_mixin.py  base.py  base_with_id.py
pipeline/references/: One Call API 3.0 - OpenWeatherMap.htm
pipeline/references/One Call API 3.0 - OpenWeatherMap_files/: 36c82f1dfbae3db2dca70a82d8ded326-1717402878.css  advertising.js  bundle_owm_postload.c31872127471c475ade1.js  css.css  css_002.css  d8fb6d080cb70d894318fcae14526239-1717402878  meteo-banner.css  meteo-banner.js  postload_scripts_js.c31872127471c475ade1.js  smart_banner_android.css  smart_banner_android.js
pipeline/repository/: __init__.py  base.py  weather.py
pipeline/schemas/: __init__.py
pipeline/schemas/api/: __init__.py  weather.py
pipeline/schemas/files/: __init__.py  weather.py
pipeline/services/: __init__.py
