[tool.poetry]
name = "pydantic-sqlalchemy-tutorial"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Cadena Aguilar <jpcadena@espol.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
